# test_openTelemetry_fastapi

./: Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  tracing.py  utils.py
